upgrade all conf to last version