@@ -13,7 +13,7 @@
 	</modules>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<highway2urhell.version>1.0.2-SNAPSHOT</highway2urhell.version>
+		<highway2urhell.version>1.0.6-SNAPSHOT</highway2urhell.version>
 	</properties>
 	<profiles>
 		<profile>
@@ -138,7 +138,7 @@
 				<artifactId>jetty-maven-plugin</artifactId>
 				<configuration>
 					<jvmArgs>
-						-javaagent:${project.build.directory}/h2hell-distribution-${highway2urhell.version}/h2hell-core-${highway2urhell.version}.jar -Djava.ext.dirs=${project.build.directory}/h2hell-distribution-${highway2urhell.version}/ -DH2H_CONFIG=${project.build.directory}/classes/config.properties -DH2H_PATH=${project.basedir}/src/main/webapp/
+						-javaagent:${settings.localRepository}/com/highway2urhell/h2hell-core/${highway2urhell.version}/h2hell-core-${highway2urhell.version}.jar -DH2H_INSTALL=${settings.localRepository}/com/highway2urhell/h2hell-distribution/${highway2urhell.version}/h2hell-distribution-${highway2urhell.version}/ -DH2H_CONFIG=${project.build.directory}/classes/config.properties
 					</jvmArgs>
 					<stopKey>foo</stopKey>
 					<stopPort>9999</stopPort>
